Use a separate kind of marker for Java errors
Now DecoratedJavaReconciler can clean up Java errors without also removing
the Coq ones, so that's good

--- a/plugins/dk.itu.turbocharger/plugin.xml
+++ b/plugins/dk.itu.turbocharger/plugin.xml
@@ -27,8 +27,8 @@
       </editor>
    </extension>
    <extension
-         id="kdj_error"
-         name="dj error"
+         id="dk.itu.coqoon.turbocharger:marker:java"
+         name="Java problem"
          point="org.eclipse.core.resources.markers">
       <persistent
             value="true">
